<resources>
    <string name="app_name">CollageImage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="language_options">Language</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="backtohome">Back to home</string>
    <string name="Dywtbh">Do you want back to home?</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="image_not_found">image not found</string>
    <string name="selectsingleimage">Select image to apply changes</string>
    <string name="pmirror">Mirror</string>
    <string name="pflip">Flip</string>
    <string name="protate">Rotate</string>
    <string name="pzoomplus">Zoom</string>
    <string name="pleft">Left</string>
    <string name="pright">Right</string>
    <string name="pup">Up</string>
    <string name="pdown">Down</string>
    <string name="photo_collage">Photo Collage</string>
    <string name="edit_image">Edit Image</string>
    <string name="popular_template">Popular Templates</string>
    <string name="corner">Corner\t</string>
    <string name="color">Color</string>
    <string name="blur">BLUR</string>
    <string name="gradient">gradient</string>
    <string name="custom">Custom</string>
    <string name="layout">Layout</string>
    <string name="filter">Filter</string>
    <string name="bg">Background</string>
    <string name="frame">Frame</string>
    <string name="text">Text</string>
    <string name="sticker">Sticker</string>
    <string name="draw">Draw</string>
    <string name="add">Add</string>
    <string name="ratio">Ratio</string>
    <string name="border_color">Border Color</string>
    <string name="txt_border">Border</string>
    <string name="border_thickness">Border Thickness</string>
    <string name="padding">Padding</string>
    <string name="try_again">Try Again</string>
    <string name="font">Font</string>
    <string name="add_text">Add text</string>
    <string name="label">Label</string>
    <string name="adjust">adjust</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit Image</string>
    <string name="save">Save</string>
    <string name="no_photos">No Photo</string>
    <string name="ratio_image">Ratio Image</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="hightlight">Hightlight</string>
    <string name="shadow">Shadow</string>
    <string name="warmth">Warmth</string>
    <string name="vignette">Vignette</string>
    <string name="hue">Hue</string>
    <string name="tint">Tint</string>
    <string name="fade">Fade</string>
    <string name="staturation">Saturation</string>
    <string name="label_brush">Brush</string>
    <string name="tap_to_edit">Tap to edit</string>
    <string name="todo">TODO</string>
    <string name="Origin">Origin</string>
    <string name="Fit">Fit</string>
    <string name="save_successful">Save Succcessful</string>
    <string name="mess_save_ss">You have saved your image successfully\nEnjoy your time now!</string>
    <string name="back_to_home">Back to home</string>
    <string name="this_action_can_contain_ads">This action may contain advertising</string>
    <string name="finish">Press 1 more time to exit</string>
    <string name="we_will_return_you_to_the_previous_screen">We will return you to the \\nprevious screen?</string>
    <string name="str_continue">Continue</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="no_browser">No Browser</string>
    <string name="channel_description">This is notify</string>
    <string name="channel_name">NotiNoti</string>
    <string name="des_rate_4_5">We like you too</string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="des_rate_1_2_3">Oh, no!</string>
    <string name="please_give_us_some_feedback">Please give us some feedback</string>
    <string name="rate_thanks">Rate in app</string>
    <string name="language">Language</string>
    <string name="you_need_pick_a_language">You need pick a language</string>


    //onBoarding
    <string name="title_onboarding_1">Free Collage and Photo Editing Tool</string>
    <string name="des_onboarding_1"> </string>
    <string name="title_onboarding_2">Professional design template</string>
    <string name="des_onboarding_2"> </string>
    <string name="title_onboarding_3">Expert photo filters and smooth \n image blending</string>
    <string name="des_onboarding_3">  </string>
    <string name="title_onboarding_4">Many beautiful fonts, stickers, and \ndecorative frames</string>
    <string name="des_onboarding_4"> </string>

    //permission
    <string name="permission">Permission</string>
    <string name="permission_need">Permission</string>
    <string name="des_permission"><b>Photo Collage</b> requires permission to use the (device’s camera and storage)</string>
    <string name="go">Go</string>
    <string name="per_overlay">You need overlay permission to use this app</string>
    <string name="deny_pers">Permissions is required to use this application</string>
    <string name="permissions_have_been_granted">Permissions have been granted!</string>
    <string name="skip">Skip</string>
    <string name="str_notify">Notification</string>
    <string name="str_record">Recorder</string>
    <string name="str_camera">Camera</string>
    <string name="str_draw">Draw overlay</string>
    <string name="str_storage">Storage</string>
    <string name="step_2">Step 1. Camera</string>
    <string name="step_4">Step 2. Storage</string>
    <string name="you_can_select">You can select: </string>
    <string name="message_per_dialog">Click button Step to grant permission!</string>
    <string name="message_per_granted">Permission have been granted!</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="are_you_sure_to_exit_the_app">Are you sure to exit the app?</string>
    <string name="exit_the_app">Exit the app?</string>
    <string name="exit">Exit</string>
    <string name="stay">Stay</string>
    <string name="title_rate">Rate This App</string>
    <string name="des_rate_0">We’d love to know!</string>
    <string name="may_be_later">Maybe later</string>
    <string name="update_now">Update now</string>
    <string name="des_update">Please, update app to new version to continue using</string>
    <string name="title_update">New version available</string>

    <string name="home">HOME</string>
    <string name="template">Template</string>
    <string name="album">Album</string>
    <string name="photo">Photo</string>
    <string name="selected">Selected</string>
    <string name="change_image">Change Image</string>

    <string name="save_file_before_closing">Save file before closing</string>
    <string name="the_file_will_be_disappear_and_you_can_t_find_this_file_in_any_folders">The file will be disappear and you can’t find this file in any folders</string>
    <string name="txt_loading">Loading</string>
    <string name="pswap">Swap</string>
    <string name="replace">Replace</string>
    <string name="crop">Crop</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="click_to_step_by_step_for_require_permission">Click to step by step for require permission</string>
    <string name="setting">Setting</string>
    <string name="feedback">Feedback</string>
    <string name="don_t_save">Don\'t Save</string>
    <string name="commingsoon">Coming Soon</string>
    <string name="image_count">images</string>
    <string name="select_at_least_3_images">Please select at least 3 images</string>
    <string name="capture_no">No images captured</string>
    <string name="maximunpic">Maximun pictures</string>
    <string name="take_only_pic">You can only take 1 photo</string>
    <string name="select_other_img">select other image</string>
    <string name="select_image_to_change">Select a image to change</string>
    <string name="try_other_template">Try other template</string>
    <string name="edit_other_image">Edit other image</string>"

    <string name="english">English</string>
    <string name="spanish">Español</string>
    <string name="french">Français</string>
    <string name="hindi">हिंदी</string>
    <string name="portuguese">Português</string>
    <string name="arabic">العربية</string>
    <string name="turkish">Türkçe</string>
    <string name="chinese">中文</string>
    <string name="japanese">日本語</string>
    <string name="korean">한국어</string>
    <string name="russian">Русский</string>
    <string name="chinese_simplified">中文 (简体)</string>
    <string name="chinese_traditional">中文 (繁体)</string>
    <string name="portuguese_brazil">Português (Brasil)</string>
    <string name="bengal">বাংলা</string>
    <string name="german">Deutsch</string>
    <string name="indonesia">Indonesia</string>


</resources>