<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:scrollbars="none"
    android:tag="layout/layout_parent_func_0">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llChangeLayout"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_layout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/layout"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChangeBG"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bg" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/bg"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChangeFrame"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_frame" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/frame"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChangeText"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/text"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChangeFilter"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/filter"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llChangeSticker"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sticker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/sticker"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/change_draw"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_draw" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/draw"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_image"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="@dimen/_15sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/add"
                android:textColor="@color/smoke"
                android:textSize="@dimen/_9ssp" />
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>
